[+] fix scroll on mobile devices

--- a/src/sass/pages.scss
+++ b/src/sass/pages.scss
@@ -2,6 +2,10 @@
     color: white;
     padding: 1rem;
     padding-top: $header-height;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 #home {
